fix the whitespace at the top of travel page

--- a/public/app/components/adventure/travel/travel-style.css
+++ b/public/app/components/adventure/travel/travel-style.css
@@ -1,5 +1,5 @@
 #travel .top {
-    margin-top: -180px;
+    margin-top: -370px;
 }
 #travel #map {
     position: relative;
